<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/ms_leader"
                        android:textColor="#3C3939"
                        android:textColorHint="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text"
                        android:hint=""
                        android:paddingLeft="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/_2nd_observer"
                        android:textColor="#3C3939"
                        android:textColorHint="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text"
                        android:hint=""
                        android:paddingStart="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/_3rd_observer"
                        android:textColor="#3C3939"
                        android:textColorHint="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text"
                        android:hint=""
                        android:paddingStart="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/_4th_observer"
                        android:textColor="#3C3939"
                        android:textColorHint="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edit_text"
                        android:hint=""
                        android:paddingStart="10dp" />


                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    android:text="Weather"
                    android:textColor="#3C3939"
                    android:textColorHint="#FFFFFF" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:orientation="vertical">


                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp" />


                    <Spinner
                        android:id="@+id/spinner3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp" />


                    <Spinner
                        android:id="@+id/spinner4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp" />


                    <Spinner
                        android:id="@+id/spinner5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp" />


                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/previous_Button"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button"
                    android:text="Previous"
                    android:textColor="@color/colorWhite" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/red_button"
                    android:text="Cancel"
                    android:textColor="@color/colorWhite" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nextButton"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button"
                    android:text="Next"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</layout>